+ : new feature
- : deprecated feature
* : bugfix or changed code
Bug numbers are references to bugs in http://www.achievo.org/bugzilla
[names] are references to people in the AUTHORS file.
Please do not exceed 80 characters per line.

Changed in ATK 6.2
------------------
+ Added atkEcho() function for making echo output only from cron. [Yury]
+ Added support for searching with a '/' as seperator for from/to values in a
  free text search for atkDateAttribute. [Tjeerd, Peter]
+ Added node, nodetitle, action and actiontitle as separate entries to
  the stack-trace array. (Achievo Bug 942) [Peter]
+ Added support for objects tat implement the ArrayAccess interface in
  atkStringParser and don't threat strings as an array anymore. [Peter]
+ atkCountryAttribute now has a new list type called "custom", this custom
  list can be customised by calling the new method "setList" with as parameter
  a array of country iso codes. After setting the list you can just request
  the custom list like you would with the "world" or "europe" list.
  [Erik]
+ atkFrontController will now register scripts and styles in child
  controllers after the main controller [Harrie]
+ Added unregister_style() method to atkPage to unregister a stylesheet.
  [Tjeerd]
+ atkBoolAttribute now uses getLabel for displaying it's label if it uses the
  AF_BOOL_INLINE_LABEL flag. [Tjeerd]
+ atkAttribute's HTML input box now has an id attribute by default. [Tjeerd]
+ atkCountryAttribute now includes a world shortlist that includes US+EU15
  [Erik]
+ Adding to atkaggregatedcolumn support using relation field as searching
  field. [Yury]
+ Took the file error check out of the validate function so that it can be
  called statically from outside of atkfileattribute. It returns the
  corresponding error. fetchFileErrorType($_FILES[0]['error']) [Erik]
+ Initial values are now filled as well for the destination of an
  atkOneToOnerelation during a call to initial_values. [Tjeerd,Peter]